--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "<<<<<<< HEAD # CS260 ======= <span style=\"color: blue;\">CS260 web design project</span>",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"},
   "keywords": [],
   "author": "",
   "license": "ISC",
