--- a/Anti-Scam/package.json
+++ b/Anti-Scam/package.json
@@ -15,6 +15,7 @@
     "vite": "^6.0.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
