--- a/Anti-Scam/service/package.json
+++ b/Anti-Scam/service/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.12.0",
     "uuid": "^11.0.3"
