--- a/Anti-Scam/package.json
+++ b/Anti-Scam/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "ws": "^8.18.0"
   }
 }
